[package]
name = "rust-todo-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version="0.5.0-rc.2", features=["json"]}
rocket_db_pools = { version="0.1.0-rc.2", features=["mongodb"]}
mongodb = "2.2.2"
bson = { version="2.3.0", features=["chrono-0_4"]}
futures = "0.3"
serde = "1.0.137"
chrono = { version="0.4.19", features = ["serde"]}
anyhow = "1.0.57"
